Update contact details in index.html

--- a/index.html
+++ b/index.html
@@ -241,9 +241,9 @@ N:Niloy;MD Mostafa;;;
 FN:MD Mostafa Niloy
 ORG:Visernic Limited
 TITLE:Chief Executive Officer
-TEL;TYPE=WORK,VOICE:+8801755123456
+TEL;TYPE=WORK,VOICE:+447577062211
 EMAIL:mostafa@visernic.com
-ADR;TYPE=WORK:;;Banani;Dhaka;1213;Bangladesh
+ADR;TYPE=WORK:;;Nazipur;Naogaon;6540;Bangladesh
 END:VCARD`;
 
                 try {
