--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <meta property="twitter:image" content="https://i.postimg.cc/ZKJwq0Sr/mostafa-niloy.jpg">
 
     <!-- Tailwind CSS for styling -->
-    <script src="https://cdn.tailwindcss.com" type="68b6369fae87f224662bab41-text/javascript"></script>
+    <script src="https://cdn.tailwindcss.com"></script>
     
     <!-- Google Fonts: Inter -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -70,7 +70,7 @@
             </div>
             <div class="absolute top-24 left-1/2 -translate-x-1/2 w-full px-4">
                 <div class="relative text-center">
-                    <script src="/cdn-cgi/scripts/7d0fa10a/cloudflare-static/rocket-loader.min.js" data-cf-settings="68b6369fae87f224662bab41-|49"></script><img class="w-36 h-36 rounded-full shadow-lg border-4 border-white mx-auto" 
+                    <img class="w-36 h-36 rounded-full shadow-lg border-4 border-white mx-auto" 
                          src="https://i.postimg.cc/76Cf9P4F/md-mostafa.png" 
                          onerror="this.onerror=null;this.src='https://placehold.co/144x144/e2e8f0/4a5568?text=Profile';" 
                          alt="Profile picture of MD Mostafa Niloy">
@@ -87,9 +87,9 @@
                     <svg xmlns="http://www.w3.org/2000/svg" class="h-7 w-7" viewBox="0 0 20 20" fill="currentColor"><path fill-rule="evenodd" d="M6.267 3.455a3.066 3.066 0 001.745-.723 3.066 3.066 0 013.976 0 3.066 3.066 0 001.745.723 3.066 3.066 0 012.812 2.812c.051.643.304 1.254.723 1.745a3.066 3.066 0 010 3.976 3.066 3.066 0 00-.723 1.745 3.066 3.066 0 01-2.812 2.812 3.066 3.066 0 00-1.745.723 3.066 3.066 0 01-3.976 0 3.066 3.066 0 00-1.745-.723 3.066 3.066 0 01-2.812-2.812 3.066 3.066 0 00-.723-1.745 3.066 3.066 0 010-3.976 3.066 3.066 0 00.723-1.745 3.066 3.066 0 012.812-2.812zm7.44 5.252a.75.75 0 00-1.06-1.06L9 10.94l-1.72-1.72a.75.75 0 00-1.06 1.06l2.25 2.25a.75.75 0 001.06 0l4.25-4.25z" clip-rule="evenodd" /></svg>
                 </span>
             </div>
-            <p class="text-lg text-slate-600 font-medium mt-1">Founder & Chief Executive Officer at <a href="https://visernic.com" target="_blank" rel="noopener noreferrer" class="font-semibold text-blue-600">Visernic Limited</a> </p>
+            <p class="text-lg text-slate-600 font-medium mt-1">Founder & Chief Executive Officer at <a href="https://visernic.com" target="_blank" rel="noopener noreferrer"</a> <span class="font-semibold text-blue-600">Visernic Limited</span></p>
             <div class="mt-6 flex items-center justify-center gap-4">
-                <a href="/cdn-cgi/l/email-protection#b0dddfc3c4d1d6d1f0c6d9c3d5c2ded9d39ed3dfdd" class="action-button bg-blue-600 text-white font-bold text-sm py-3 px-5 rounded-full flex items-center justify-center hover:bg-blue-700">
+                <a href="mailto:mostafa@visernic.com" class="action-button bg-blue-600 text-white font-bold text-sm py-3 px-5 rounded-full flex items-center justify-center hover:bg-blue-700">
                     <i class="fas fa-envelope mr-2"></i> Email Me
                 </a>
                 <a href="tel:+447577062211" class="action-button bg-slate-200 text-slate-800 font-bold text-sm py-3 px-5 rounded-full flex items-center justify-center hover:bg-slate-300">
@@ -169,7 +169,7 @@
                     <div class="space-y-4">
                         <div class="flex items-center">
                             <i class="fas fa-envelope text-slate-400 w-5 text-center"></i>
-                            <span class="ml-3 font-medium text-slate-600 break-all"><a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="74191b070015121534021d0711061a1d175a171b19">[email&#160;protected]</a></span>
+                            <span class="ml-3 font-medium text-slate-600 break-all">mostafa@visernic.com</span>
                         </div>
                         <div class="flex items-center">
                             <i class="fas fa-phone text-slate-400 w-5 text-center"></i>
@@ -230,7 +230,7 @@
         &copy; 2025 Visernic Limited. All Rights Reserved.
     </footer>
 
-    <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script type="68b6369fae87f224662bab41-text/javascript">
+    <script>
         document.addEventListener('DOMContentLoaded', function() {
             const downloadButton = document.getElementById('downloadVcardBtn');
             
@@ -257,6 +257,5 @@ END:VCARD`;
             }
         });
     </script>
-<script src="/cdn-cgi/scripts/7d0fa10a/cloudflare-static/rocket-loader.min.js" data-cf-settings="68b6369fae87f224662bab41-|49" defer></script><script defer src="https://static.cloudflareinsights.com/beacon.min.js/vcd15cbe7772f49c399c6a5babf22c1241717689176015" integrity="sha512-ZpsOmlRQV6y907TI0dKBHq9Md29nnaEIPlkf84rnaERnq6zvWvPUqr2ft8M1aS28oN72PdrCzSjY4U6VaAw1EQ==" data-cf-beacon='{"version":"2024.11.0","token":"0ebff639edc440bc91d3696cff8eeb42","r":1,"server_timing":{"name":{"cfCacheStatus":true,"cfEdge":true,"cfExtPri":true,"cfL4":true,"cfOrigin":true,"cfSpeedBrain":true},"location_startswith":null}}' crossorigin="anonymous"></script>
 </body>
 </html>
