--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                     <svg xmlns="http://www.w3.org/2000/svg" class="h-7 w-7" viewBox="0 0 20 20" fill="currentColor"><path fill-rule="evenodd" d="M6.267 3.455a3.066 3.066 0 001.745-.723 3.066 3.066 0 013.976 0 3.066 3.066 0 001.745.723 3.066 3.066 0 012.812 2.812c.051.643.304 1.254.723 1.745a3.066 3.066 0 010 3.976 3.066 3.066 0 00-.723 1.745 3.066 3.066 0 01-2.812 2.812 3.066 3.066 0 00-1.745.723 3.066 3.066 0 01-3.976 0 3.066 3.066 0 00-1.745-.723 3.066 3.066 0 01-2.812-2.812 3.066 3.066 0 00-.723-1.745 3.066 3.066 0 010-3.976 3.066 3.066 0 00.723-1.745 3.066 3.066 0 012.812-2.812zm7.44 5.252a.75.75 0 00-1.06-1.06L9 10.94l-1.72-1.72a.75.75 0 00-1.06 1.06l2.25 2.25a.75.75 0 001.06 0l4.25-4.25z" clip-rule="evenodd" /></svg>
                 </span>
             </div>
-            <p class="text-lg text-slate-600 font-medium mt-1">Founder & Chief Executive Officer at <a href="https://visernic.com" target="_blank" rel="noopener noreferrer"</a> <span class="font-semibold text-blue-600">Visernic Limited</span></p>
+            <p class="text-lg text-slate-600 font-medium mt-1">Founder & Chief Executive Officer at <a href="https://visernic.com" target="_blank" rel="noopener noreferrer" class="font-semibold text-blue-600">Visernic Limited</a> </p>
             <div class="mt-6 flex items-center justify-center gap-4">
                 <a href="mailto:mostafa@visernic.com" class="action-button bg-blue-600 text-white font-bold text-sm py-3 px-5 rounded-full flex items-center justify-center hover:bg-blue-700">
                     <i class="fas fa-envelope mr-2"></i> Email Me
